@startuml
class S_Exercise {
exerciseNr: int
name: String
}

class S_Template {
templateNr: int
userId: int
name: String
}

class S_Set {
SetNr: int
exerciseNr: int
userId: int
templateNr: int
weight: double
Date: date
reps: int
}

class S_ExercisePosition {
exercisePositionNr: int
templateNr: int
exerciseNr: int
}

class S_User {
id: int
userName: String
password: String
}

S_Exercise "1" -- "*" S_Set : > has
S_Exercise "*" -- "*" S_Template : < includes
S_User "1" -- "*" S_Template : > has
S_Set "*" -- "1" S_User : < has

S_ExercisePosition .. (S_Exercise, S_Template)
@enduml
